# gen_sqlx_type

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/test-postgresql/: .envrc  Cargo.toml  docker-compose.yml
examples/test-postgresql/.sqlx/: query-516d88a2ff77a0ba338c457afe720267da0bb1541fa43c078a6b7b47120b949e.json
examples/test-postgresql/migrations/: 20260302210635_initial_schema.sql
examples/test-postgresql/src/: main.rs
examples/test-sqlite/: Cargo.toml
examples/test-sqlite/.sqlx/: query-516d88a2ff77a0ba338c457afe720267da0bb1541fa43c078a6b7b47120b949e.json
examples/test-sqlite/migrations/: 20260302210635_initial_schema.sql
examples/test-sqlite/src/: main.rs
src/: common.rs  lib.rs
src/drivers/: mod.rs  postgres.rs  sqlite.rs
