[package]
name = "gen_sqlx_type"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []
sqlite = ["sqlx/sqlite", "sqlx-sqlite"]
postgres = ["sqlx/postgres", "sqlx/json", "sqlx/uuid", "sqlx/chrono", "sqlx/bigdecimal", "sqlx-postgres"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "any", "bigdecimal"] }
sqlx-core = { version = "0.8.6", features = ["offline"] }
sqlx-sqlite = { version = "0.8.6", optional = true, features = ["offline", "chrono"] }
sqlx-postgres = { version = "0.8.6", optional = true, features = ["offline", "chrono", "bigdecimal", "uuid"] }
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
tokio = { version = "1.43.0", features = ["full"] }
once_cell = "1.20.3"
chrono = "0.4.39"
url = "2.5.4"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
bigdecimal = "0.4.7"
