[package]
name = "test-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
serde = {version="1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "tls-rustls", "json"] }
gen_sqlx_type = {path="../..", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
