[package]
name = "test-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gen_sqlx_type = {path="../..", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
